# stock

./: .gitignore  CLAUDE.md  README.md  app.py  backtest_results.json  backtest_results_12m.json  backtest_results_12m_trailing.json  backtest_results_36m.json  backtest_results_6m.json  backtest_results_6m_trailing.json  backtest_results_9m.json  backtest_results_9m_trailing.json  backtest_results_ma10.json  backtest_strategy_compare.json  concepts_data.py  gemini_writer.py  pyproject.toml  qlib_factors.py  requirements.txt  run_daily_scan.bat  run_weekly_summary.bat  scan_result.csv  setup_schedule.bat  使用說明.md
.claude/: launch.json  settings.local.json
.streamlit/: config.toml
agents/: README.md  __init__.py  analysts.py  build_preview.py  gemini_text.py  news.py  pipeline.py
backtest_cache/: 1533_chip.csv  1533_ohlcv.csv  2243_chip.csv  2243_ohlcv.csv  2301_chip.csv  2301_ohlcv.csv  2308_chip.csv  2308_ohlcv.csv  2317_chip.csv  2317_ohlcv.csv  2327_chip.csv  2327_ohlcv.csv  2329_chip.csv  2329_ohlcv.csv  2330_chip.csv  2330_ohlcv.csv  2337_chip.csv  2337_ohlcv.csv  2344_chip.csv  2344_ohlcv.csv  2345_chip.csv  2345_ohlcv.csv  2357_chip.csv  2357_ohlcv.csv  2368_chip.csv  2368_ohlcv.csv  2369_chip.csv  2369_ohlcv.csv  2376_chip.csv  2376_ohlcv.csv  2379_chip.csv  2379_ohlcv.csv  2382_chip.csv  2382_ohlcv.csv  2383_chip.csv  2383_ohlcv.csv  2388_chip.csv  2388_ohlcv.csv  2408_chip.csv  2408_ohlcv.csv  (+129 more)
daily_reports/: positions.json
data/: optical_comm_scan.csv
docs/: 20230223.json  20230224.json  20230301.json  20230302.json  20230303.json  20230306.json  (+848 more)
(+2021 files in other folders)
